crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_tuple_additional_items_draft7.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"additionalItems\":{\"type\":\"string\"},\"items\":[{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                (arr
                    .get(0usize)
                    .map_or(
                        true,
                        |instance| match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        },
                    )) && (arr.iter().skip(1usize).all(|instance| instance.is_string()))
            }
            _ => false,
        }
