crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__items_tuple_with_true_member.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"items\":[true,{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => {
                arr.get(1usize)
                    .map_or(
                        true,
                        |instance| match instance {
                            __Value::Number(n) => __types::is_integer(n),
                            _ => false,
                        },
                    )
            }
            _ => false,
        }
