crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__max_items.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maxItems\":10,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) <= 10,
            _ => false,
        }
