crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__max_items_scientific_fraction_f64.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"maxItems\":150.0,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) <= 150,
            _ => false,
        }
