crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__maximum.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maximum\":100,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(n) => __num::le(n, 100u64),
            _ => false,
        }
