crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_items.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"minItems\":1,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Array(arr) => (arr.len() as u64) >= 1,
            _ => false,
        }
