crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__min_items_integer_valued_decimal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minItems\":2.0,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) >= 2,
            _ => false,
        }
